...
    );
  }

  Widget _githubBanner() {
    return GestureDetector(
      onTap: () => launchUrl(
        Uri.parse('https://github.com/CodeSapiens-in/CollegeSapien'),
        mode: LaunchMode.externalApplication,
      ),
      child: Container(
        padding: const EdgeInsets.symmetric(horizontal: 10, vertical: 10),
        decoration: BoxDecoration(
          color: Colors.white,
...
            ),
          ),
        ),
        const SizedBox(height: 20),
        const Center(
          child: Text(
            'Find Your College',
            style: TextStyle(
              fontFamily: 'Lexend Mega',
              fontSize: 26,
              fontWeight: FontWeight.w700,
              letterSpacing: -1.0,
              color: Colors.black,
...
